# helio-clone

./: .gitignore  AI_START.md  CLAUDE.md  DECISIONS.md  PROJECT_CONTEXT.md  README.md  TASKS.md  THIRD_PARTY_LICENSES.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json  settings.local.json
docs/ai/: BUILD_RESULT.md  CLAUDE_EXECUTION_INTELLIGENCE_FIX_PROMPT.md  CLAUDE_GOAL_FULL_DELIVERY_PROMPT.md  CLAUDE_GOAL_PROMPT.md  CLAUDE_OPEN_PRODUCT_REDESIGN_GOAL_PROMPT.md  CLAUDE_RUNTIME_PRODUCTIZATION_GOAL_PROMPT.md  CLAUDE_SANDBOX_RUNTIME_GOAL_PROMPT.md  CLAUDE_TASK_EXECUTION_GOAL_PROMPT.md  CLAUDE_WORKSPACE_VISUAL_REDESIGN_GOAL_PROMPT.md  CURRENT_GOAL_PROMPT.md  DELIVERY.md  DESIGN_BRIEF.md  EXECUTION_INTELLIGENCE_GAP_REPORT.md  FINAL_REPORT.md  FULL_DELIVERY_OPEN_ISSUES.md  FULL_DELIVERY_REPORT.md  GITHUB_LIBRARY.md  HELIOX_V4_DESIGN_DOCTRINE.md  HOW_TO_RUN_CLAUDE_GOAL.md  MARKUS_INSPIRED_IMPROVEMENT_PLAN.md  MARKUS_RUNTIME_REFERENCE.md  OPEN_REDESIGN_BUILD_RESULT.md  OPEN_REDESIGN_DELIVERY.md  OPEN_REDESIGN_FINAL_REPORT.md  OPEN_REDESIGN_PLAN.md  OPEN_REDESIGN_REVIEW.md  PLAN.md  PROJECT_AUDIT.md  PROJECT_AUDIT_FOR_GOAL.md  README.md  REALITY_CHECK.md  REVIEW.md  RUNTIME_PRODUCTIZATION_NEXT_STEPS.md  RUNTIME_PRODUCTIZATION_TEST_REPORT.md  SANDBOX_EXECUTION_DESIGN.md  TASK.md  WORKLOG.md  (+8 more)
plugins/: README.md
server/: package.json  providers.json.example  tsconfig.json  tsconfig.tsbuildinfo
services/crew/: .gitignore  README.md  app.py  pyproject.toml  requirements-lock.txt
web/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+180 files in other folders)
